
class Cinema:
    def __init__(self, id, responsavel, cnpj, endereco, telefone, cep, email, ):
        self._id = id
        self._responsavel 






    #class Cinema {
    #- id: Interger- responsavel: String   - cnpj: Interger     - endereco: String    - telefone: Interger
    #- cep: Interger     - email: String    + construtor(id, resposavel, cnpj, endereco, telefone, cep, email)
    #+ contato(id, responsavel, telefone, email)+ cadastro completo(id, responsavel, cnpj, endereco, 
    # telefone, cep, email)
